--- a/final/infosekcooker-conversion.html
+++ b/final/infosekcooker-conversion.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head> 
-      <script src="dist/modules/conversion/index.js" defer></script>
-  </head>
-  <body>
-    <!-- <button id="switch">Switch</button> -->
-    <canvas
-      id="myCanvas"
-      width="1260"
-      height="500"
-      style="border:1px solid #d3d3d3;"
-    >
-      Your browser does not support the HTML5 canvas tag.
-      </canvas>
-      <form>
-        <input type="text" size="100">
-        <input type="submit" value="confirm">
-      </form>
-  </body>
+
+<head>
+  <script src="dist/modules/conversion/index.js" defer></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+  <div id="content">
+    <div id="pallete">
+      <h3>Available Services</h3>
+      <ul>
+      </ul>
+    </div>
+    <div id="diagram" style="border: solid 1px blue; width:100vw; height:500px">
+    </div>
+
+  </div>
+</body>
+
 </html>
