conversion module done

--- a/final/index.html
+++ b/final/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head> 
+  <head>
   </head>
   <body>
     <ul>
         <li><a href="infosekcooker-conversion.html" target="_blank">Open a Conversion Module</a></li>
         <li><a href="infosekcooker-arithmetic-logic.html" target="_blank">Open an Arithmetic Module</a></li>
+        <li><a href="infosekcooker-text.html" target="_blank">Open a Text Module</a></li>
+        <li><a href="infosekcooker-hashing-encryption.html" target="_blank">Open an Hashing Module</a></li>
     </ul>
   </body>
 </html>
