--- a/final/infosekcooker-arithmetic-logic.html
+++ b/final/infosekcooker-arithmetic-logic.html
@@ -13,7 +13,7 @@
       <ul>
       </ul>
     </div>
-    <div id="diagram" style="border: solid 1px blue; width:100vw; height:500px">
+    <div id="diagram" style="border: solid 1px black; width:100vw; height:5000px">
     </div>
 
   </div>
